objects/DM_Investment_Order__c.object
<CustomObject>
    <fields>
        <fullName>DM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Investment Orders</relationshipLabel>
        <relationshipName>Investment_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Accrued_Interest__c</fullName>
        <label>DM Accrued Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Amortization_Schedule_Generation_time__c</fullName>
        <label>DM Amortization Schedule Generation time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DM_Approval_Date__c</fullName>
        <label>DM Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Buying_Price__c</fullName>
        <label>DM Buying Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Certificate_Rate__c</fullName>
        <label>DM Certificate Rate</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Charged_Off_Date__c</fullName>
        <label>DM Charged Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Charged_Off_Fees__c</fullName>
        <label>DM Charged Off Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Charged_Off_Interest__c</fullName>
        <label>DM Charged Off Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Charged_Off_Principal__c</fullName>
        <label>DM Charged Off Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Collect_Service_Fees_On__c</fullName>
        <label>DM Collect Service Fees On</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Principal Remaining</fullName>
                </value>
                <value>
                    <fullName>Interest</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>No Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Created_Loan_Delinquent_Days__c</fullName>
        <label>DM Created Loan Delinquent Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Created_Loan_Principal_Remaining__c</fullName>
        <label>DM Created Loan Principal Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Created_Loan_Status__c</fullName>
        <label>DM Created Loan Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_1__c</fullName>
        <label>DM Custom Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_2__c</fullName>
        <label>DM Custom Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_3__c</fullName>
        <label>DM Custom Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Discount_Percent__c</fullName>
        <label>DM Discount Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_End_Date__c</fullName>
        <label>DM End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_External_Id__c</fullName>
        <label>DM External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Fees_Amount_Paid__c</fullName>
        <label>DM Fees Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Generate_Amortization_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Generate Amortization Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_IOA_Accrued__c</fullName>
        <label>DM IOA Accrued</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_IOA_Amount_Paid__c</fullName>
        <label>DM IOA Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_IOA_Posted__c</fullName>
        <label>DM IOA Posted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Amount_Paid__c</fullName>
        <label>DM Interest Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Exempted_From_Service_Fee__c</fullName>
        <label>DM Interest Exempted From Service Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Posted__c</fullName>
        <label>DM Interest Posted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rate_On_Due_IOA__c</fullName>
        <label>DM Interest Rate On Due IOA</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rate_On_Due_Interest__c</fullName>
        <label>DM Interest Rate On Due Interest</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rate_On_Due_Principal__c</fullName>
        <label>DM Interest Rate On Due Principal</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rate_On_Loan__c</fullName>
        <label>DM Interest Rate On Loan</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rounding_Error__c</fullName>
        <label>DM Interest Rounding Error</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Service_Rate__c</fullName>
        <label>DM Interest Service Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Investment_Amount__c</fullName>
        <label>DM Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Investor_Amortization_Schedule_Genera__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investor Amortization Schedule Genera</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Last_Interest_Accrual_Date__c</fullName>
        <label>DM Last Interest Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Loan</label>
        <referenceTo>DM_Loan_Account__c</referenceTo>
        <relationshipLabel>Investment Orders</relationshipLabel>
        <relationshipName>DM_Investment_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Master_Archive_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Master Archive Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Minimum_Service_Fee__c</fullName>
        <label>DM Minimum Service Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Principal_Amount_Paid__c</fullName>
        <label>DM Principal Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Rebate_Amount_Paid__c</fullName>
        <label>DM Rebate Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Reinvest_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Reinvest Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Reinvest_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Reinvest Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Service_Charge_On_Full_Payment_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Service Charge On Full Payment Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Service_Fee_on_Total_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Service Fee on Total Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Share__c</fullName>
        <label>DM Share</label>
        <precision>10</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Start_Date__c</fullName>
        <label>DM Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Status__c</fullName>
        <label>DM Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed - Written Off</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Summary_Record_Id__c</fullName>
        <label>DM Summary Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Total_Amount_Paid__c</fullName>
        <label>DM Total Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Write_Off_Amount__c</fullName>
        <label>DM Write Off Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DM Investment Order</label>
    <nameField>
        <label>Investment Order	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investment Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>